<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorSecondary"
    android:padding="@dimen/margin_medium">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dialog_title"
        style="@style/custom_textview_title"
        android:text="@string/dialog_add_tiitle"
        android:layout_marginVertical="@dimen/margin_medium"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dialog_add_ingredient_name"
            style="@style/custom_dialog_input_text"
            android:hint="@string/dialog_add_ingredient_name_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dialog_add_ingredient"
        style="@style/custom_dialog_button"
        android:text="@string/dialog_add_button"
        android:enabled="false"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_medium"/>

</LinearLayout>