<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_large"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/margin_medium"
    tools:context=".presentation.recipe_list.RecipeListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recipe_info"
        style="@style/custom_recipe_list_textview_title"
        android:layout_marginTop="@dimen/custom_recipes_list_margin_top"
        android:gravity="center"
        android:text="@string/recipe_title_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recipe_subinfo"
        style="@style/custom_recipe_list_textview_subtitle"
        android:layout_marginTop="@dimen/custom_recipes_list_margin_top"
        android:gravity="center"
        android:text="@string/recipe_subtitle_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_info" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recipe_empty_rv"
        style="@style/custom_recipe_list_textview_empty"
        android:gravity="center"
        android:text="@string/tv_recipes_empty_text"
        app:layout_constraintBottom_toBottomOf="@+id/rv_recipe_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_subinfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipe_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/tv_recipe_info_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipe_subinfo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_recipe_info_sub"
        style="@style/custom_recipe_list_textview_subtitle"
        android:layout_marginVertical="@dimen/custom_recipes_list_margin_top"
        android:gravity="center"
        android:text="@string/tv_recipe_info_sub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pb_recipe_list"
        style="@style/custom_progressbar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>